--- a/android/build.xml
+++ b/android/build.xml
@@ -1,6 +1,6 @@
 <project name="watchdog" default="dist">
 	<description>
-		Ant build script for Titanium Android module wakeholder
+		Ant build script for Titanium Android module watchdog
 	</description>
 
 	<property name="ti.module.root" location="${basedir}"/>
